# FtcRustController

./: README.md  rust-toolchain.toml
TeamCode/: build.gradle
TeamCode/team_code_rust/: Cargo.toml  rustfmt.toml
TeamCode/team_code_rust/src/: lib.rs
